--- a/master_frontend_tsx/package.json
+++ b/master_frontend_tsx/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.4.8",
     "@mui/joy": "^5.0.0-beta.51",
     "@mui/material": "^6.4.7",
+    "antd": "^5.25.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
