--- a/frontend/master_frontend_tsx/package.json
+++ b/frontend/master_frontend_tsx/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.4.8",
     "@mui/joy": "^5.0.0-beta.51",
     "@mui/material": "^6.4.7",
+    "date-fns": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
